# pyalexatodo

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yaml  docs.yaml  publish.yaml
src/pyalexatodo/: api.py  cli.py  exceptions.py
src/pyalexatodo/models/: cli_settings.py  list_info.py  list_item.py  list_item_status.py  list_items_response.py  list_response.py  list_type.py
tests/: __init__.py  test_api.py
